# hinge

./: .gitignore  LICENSE  README.md  pyproject.toml  run-serial-test.sh
examples/: post_processing.ipynb  serial_test.ipynb  serial_test.py  serial_test_plot.py
examples/.ipynb_checkpoints/: serial_test-checkpoint.ipynb
src/anatomical_hinge/: __init__.py  anatomical_hinge.py  calibrate.py  constants.py  data.py  details.py  error.py  joint.py  kinematics.py  sensor.py  sensor_collection.py  state.py
src/anatomical_hinge/calibration/: axis.py  common.py  data_buffer.py  gradient_descent.py  motion_data.py  pose.py  solution_set.py  state_vector.py  x_sphere.py
src/anatomical_hinge/error/: calibration_error.py
src/anatomical_hinge/result/: calibration_result.py  joint_result.py  kinematics_result.py  result.py  temporal_result.py
src/anatomical_hinge/utilities/: historic.py  point.py  spherical.py  temporal.py
src/anatomical_hinge_nagillimi/: anatomical_hinge.py  constants.py  data.py  details.py  joint.py  kinematics.py  sensor.py  sensor_collection.py  state.py
src/anatomical_hinge_nagillimi/.ipynb_checkpoints/: anatomical_hinge-checkpoint.py
src/anatomical_hinge_nagillimi/calibration/: common_elements.py  gradient_descent.py  motion_data.py  solution_set.py  x_sphere.py
src/anatomical_hinge_nagillimi/result/: calibration_result.py  joint_result.py  kinematics_result.py  result.py
src/anatomical_hinge_nagillimi/utilities/: historic.py  point.py  spherical.py  (+1 more)
src/utilities/: historic.py  historic_number.py  sphere.py
tests/: serial_test.py
(+10 files in other folders)
